--- a/src/Makefile.arm64.msvc
+++ b/src/Makefile.arm64.msvc
@@ -7,7 +7,7 @@ LDFLAGS = /nologo /OPT:REF /OPT:ICF /LTCG /NXCOMPAT /DYNAMICBASE /MACHINE:ARM64 
 DEFS =  -D_CRT_SECURE_NO_DEPRECATE -DMECAB_USE_THREAD \
         -DDLL_EXPORT -DHAVE_GETENV -DHAVE_WINDOWS_H -DDIC_VERSION=102 \
         -DVERSION="\"0.996/ko-0.9.2\"" -DPACKAGE="\"mecab\"" \
-        -DUNICODE -D_UNICODE \
+        -DUNICODE -D_UNICODE -DMECAB_USE_UTF8_ONLY \
         -DMECAB_DEFAULT_RC="\"c:\\Program Files\\mecab\\etc\\mecabrc\""
 INC = -I. -I..
 DEL = del
